2021-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxClass.cpp: Remove class now in numvec.h

2021-08-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/numvec.h: Add simplest possible C++ vector class
	* inst/include/tidyCpp: Include vector class

2021-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxClass.cpp: New variant wrapping a simple
	class around the lean and tidy numeric vector data

2021-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxExample.cpp: Add commit and repo reference

2021-08-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/rollminmaxExample.cpp: New snippet, taken from another
	package which used to have a simple Rcpp function we can make simpler

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Add to DESCRIPTION

2021-03-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* inst/include/tidy/internals.h: Nil object define protected

	* .Rbuildignore: Add .travis.yml

2021-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Renamed from R-CMD-check.yaml and
	updated content slightly

	* README.md: Adjust badge accordingly

2020-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added to showcase run.sh at Travis and GH Actions
	* .github/workflows/R-CMD-check.yaml: Minor edits

2020-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

	* man/tidyCpp-package.Rd: Make example \dontrun to avoid 10s NOTE
	* vignettes/motivation.Rmd: Revert one URL to http
	* README.md: Make vignette URL canonical

2020-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidyCpp: No include include deprecated shield.h (as
	protect.h also defines a compatibility typedef)

	* inst/snippets/convolveExample.cpp: Use explicit R::Protect ownership
	* inst/snippets/dimnamesExample.cpp: Ditto
	* inst/snippets/protectExamples.cpp: Ditto