@@ -1,3 +1,7 @@
+2021-08-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/tidy/numvec.h: Make private data element be R::Protect
+
 2021-08-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/snippets/rollminmaxClass.cpp: Remove class now in numvec.h
